--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.14",
+    "animate.css": "^4.1.1",
     "axios": "^1.8.3",
+    "eslint-plugin-react": "^7.37.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
