--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
